--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.31.2'
     }
+    gradle.taskGraph.whenReady {
+        tasks.each { task ->
+            if (task.name.contains("crashlyticsUploadDeobsAppRelease")) {
+                task.enabled = false
+            }
+        }
+    }
 }
 
 allprojects {
