--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,7 +165,8 @@ dependencies {
     implementation 'com.github.gedoor:rhino-android:1.4'
 
     //网络
-    implementation 'com.squareup.retrofit2:retrofit:2.8.0'
+    //noinspection GradleDependency
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
