--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ def gitCommits = Integer.parseInt('git rev-list --count HEAD'.execute([], projec
 
 android {
     compileSdkVersion 29
+    flavorDimensions ("version")
     signingConfigs {
         if (project.hasProperty("RELEASE_STORE_FILE")) {
             myConfig {
@@ -37,7 +38,6 @@ android {
         targetSdkVersion 29
         versionCode gitCommits
         versionName version
-        flavorDimensions "versionCode"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         project.ext.set("archivesBaseName", name + "_" + version)
         multiDexEnabled true
@@ -76,9 +76,11 @@ android {
     }
     productFlavors {
         app {
+            dimension "version"
             manifestPlaceholders = [APP_CHANNEL_VALUE: "app"]
         }
         google {
+            dimension "version"
             applicationId "io.legado.play"
             manifestPlaceholders = [APP_CHANNEL_VALUE: "google"]
         }
