--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ def gitCommits = Integer.parseInt('git rev-list --count HEAD'.execute([], projec
 
 android {
     compileSdkVersion 29
-    flavorDimensions ("version")
+    flavorDimensions("version")
     signingConfigs {
         if (project.hasProperty("RELEASE_STORE_FILE")) {
             myConfig {
@@ -196,3 +196,9 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+afterEvaluate {
+    for (Task task : project.tasks.matching { it.name.startsWith('crashlyticsUploadDeobs') }) {
+        task.enabled = false
+    }
+}
